--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
 .DS_Store
-node_modules
-/dist
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
+Thumbs.db
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.idea
+.vagrant
+.env
+.version
+vagrant.yaml
+app/vendor/
+data/*
+data-protected/*
+spa/node_modules/
+app/frontend/web/node_modules/
+app/frontend/web/uploads/
+app/backend/web/uploads/
+app/frontend/web/data/
+app/backend/web/data/
+app/frontend/web/data-protected/
+app/backend/web/data-protected/
+app/frontend/web/media/
+app/backend/web/media/
+node_modules/
+/nbproject
+/*.sql
+test.json
+test.xml
