--- a/spa/package.json
+++ b/spa/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "or": "^0.2.0",
+    "vue": "^2.6.10",
+    "vue-owl-carousel": "^2.0.3",
+    "yarn": "^1.22.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
